@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 69c3dd9b2ebec66fb739d1c3896f1351) *)
+(* DO NOT EDIT (digest: 1f2970da3e85e1fa96915f0004cbbc64) *)
 (*
    Regenerated by OASIS v0.2.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5310,7 +5310,8 @@ let setup_t =
                            "endian.c";
                            "read_cred.c";
                            "fexecve.c";
-                           "sendmsg.c"
+                           "sendmsg.c";
+                           "setresuid.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
