@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: 507221100d20ed930903ddd2b692a1c2)
+# DO NOT EDIT (digest: 0a8bda31574609b23e6e80d7a920f9c3)
 eventfd.o
 dirfd.o
 fsync.o
@@ -20,4 +20,9 @@ time.o
 pts.o
 execinfo.o
 malloc.o
+endian.o
+read_cred.o
+fexecve.o
+sendmsg.o
+setresuid.o
 # OASIS_STOP
