@@ -16,6 +16,7 @@
   * all_write, single_write, pwrite, intr_write
   * all_write64, single_write64, pwrite64, intr_write64
   * mkstemp
+  * setresuid, setresgid
   * New submodules: EndianBig, EndianLittle, EndianNet, EndianHost
     * New bindings
       * uint16_from_host uint16_to_host
